--- a/C969/Resources/LoginFormPrompts_en.resx
+++ b/C969/Resources/LoginFormPrompts_en.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DBConnectionFailureMessage" xml:space="preserve">
+    <value>Couldn't establish connection with the database. Check if SQL server is up.</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Sceduling App Login Window</value>
+  </data>
+  <data name="LoginFailedMessage" xml:space="preserve">
+    <value>Login Failed. Please check your credentials and try again.</value>
   </data>
   <data name="loginHeaderLabel" xml:space="preserve">
     <value>Please log in</value>
@@ -132,7 +138,13 @@
   <data name="loginQuitButton" xml:space="preserve">
     <value>Quit</value>
   </data>
+  <data name="LoginSuccessMessage" xml:space="preserve">
+    <value>Login Successful.</value>
+  </data>
   <data name="loginUsernameLabel" xml:space="preserve">
     <value>Username</value>
+  </data>
+  <data name="UsernamePwdEmptyMessage" xml:space="preserve">
+    <value>Username and password cannot be empty.</value>
   </data>
 </root>
