Added: -Changes to utc time - Added current locale indicator

--- a/C969/Resources/LoginFormPrompts_ru.resx
+++ b/C969/Resources/LoginFormPrompts_ru.resx
@@ -138,6 +138,9 @@
   <data name="LoginSuccessMessage" xml:space="preserve">
     <value>Вход выполнен успешно.</value>
   </data>
+  <data name="loginTimeZoneLabel" xml:space="preserve">
+    <value>Местный Часовой Пояс:</value>
+  </data>
   <data name="loginUsernameLabel" xml:space="preserve">
     <value>Юзернейм</value>
   </data>
