--- a/C969/Resources/LoginFormPrompts_en.resx
+++ b/C969/Resources/LoginFormPrompts_en.resx
@@ -141,6 +141,9 @@
   <data name="LoginSuccessMessage" xml:space="preserve">
     <value>Login Successful.</value>
   </data>
+  <data name="loginTimeZoneLabel" xml:space="preserve">
+    <value>Local Time Zone:</value>
+  </data>
   <data name="loginUsernameLabel" xml:space="preserve">
     <value>Username</value>
   </data>
