--- a/C969/Resources/LoginFormPrompts_ru.resx
+++ b/C969/Resources/LoginFormPrompts_ru.resx
@@ -117,17 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConnectionFailedCaption" xml:space="preserve">
+    <value>Ошибка соединения с базой данных</value>
+  </data>
+  <data name="ConnectionFailedMessage" xml:space="preserve">
+    <value>Ошибка соединения с базой данных. Проверьте соединение с базой данных.</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Окно для входа в приложение</value>
   </data>
   <data name="LoginFailedCaption" xml:space="preserve">
-    <value>Неправильные логин или пароль</value>
+    <value>Неправильные логин или пароль.</value>
   </data>
   <data name="LoginFailedMessage" xml:space="preserve">
     <value>Вход не был выполнен. Пожалуйста проверьте логин и пароль.</value>
   </data>
   <data name="loginHeaderLabel" xml:space="preserve">
-    <value>Пожалуйста введите данные для входа</value>
+    <value>Пожалуйста введите данные для входа.</value>
   </data>
   <data name="loginLoginButton" xml:space="preserve">
     <value>Вход</value>
