--- a/C969/Resources/LoginFormPrompts_en.resx
+++ b/C969/Resources/LoginFormPrompts_en.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConnectionFailedCaption" xml:space="preserve">
+    <value>Database connection error</value>
+  </data>
+  <data name="ConnectionFailedMessage" xml:space="preserve">
+    <value>Database connection failure. Please check database connection settings.</value>
+  </data>
   <data name="DBConnectionFailureMessage" xml:space="preserve">
     <value>Couldn't establish connection with the database. Check if SQL server is up.</value>
   </data>
